# bazel-kubectl-tools

./: .bazelignore  .bazelrc  .gitignore  .gitlab-ci.yml  BUILD.bazel  MODULE.bazel  README.md  defs.bzl  extensions.bzl
examples/: BUILD.bazel
private/: BUILD.bazel  kubectl_download.bzl  kubectl_wait.sh
private/tests/: BUILD.bazel  README.md  integration_test.bzl  simple_test.bzl  validation_test.bzl
